<resources>
    <string name="app_name">Password Keeper</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="password_keeper">Password Keeper</string>
    <string name="subtitle">An easy way for you to remember =)</string>
    <string name="image_description">Ícone de uma chave, representando ícone do app</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up_to_join">Sign up to join</string>
    <string name="just_a_few_steps">Just a few steps</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Your first name/nickname here</string>
    <string name="categories">Categories</string>
    <string name="favorite">Favorites</string>
    <string name="search">Search for description</string>
    <string name="hello">Hello,</string>
    <string name="advice_of_moment">Advice of moment =)</string>
    <string name="icone_de_pesquisa">Ícone de pesquisa</string>
    <string name="text_type">Streaming</string>
    <string name="new_card">New Card</string>
    <string name="settings">Settings</string>
    <string name="image_description_card_view_type">Imagem representando uma categoria de senhas</string>
    <string name="the_advice_above">%1$d words that can change your day. Try a new one!</string>
    <string name="ask_for_advice">Ask for advice</string>
    <string name="no_message_found">Sorry, no message found!</string>
    <string name="error">Sorry, an error happened!</string>
    <string name="message">Most things are not as bad as you think they are. Most things are not as bad as you think they are Most things are not as bad as you think they are.dhsudhsaddhusaudhusaduhsauhsaudsauuhsaudhsadsauusduhsaduduahas</string>
    <string name="loading">Wait a minute, we\'re getting a nice one for you</string>
    <string name="email_or_password_wrong">Sorry, email or password is wrong!</string>
    <string name="email_field_is_empty">Email field is empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_field_is_empty">Password field is empty</string>
    <string name="name_field_is_empty">Name field is empty</string>
    <string name="password_weak">Password weak</string>
    <string name="password_not_match">The passwords do not match</string>
    <string name="email_already_exist">Email already exists</string>
    <string name="email_is_blank">Email is blank</string>
    <string name="your_password_must_have">Your password must have:</string>
    <string name="at_least_1_upper_case_letter">At least 1 upper case letter</string>
    <string name="at_least_1_lower_case_letter">At least 1 lower case letter</string>
    <string name="at_least_1_special_character_amp"><![CDATA[At least 1 special character: !@#$%^&+=-]]></string>
    <string name="at_least_1_numeric_character">At least 1 numeric character</string>
    <string name="at_least_16_characteres">At least 16 characteres</string>
    <string name="streaming">Streaming</string>
    <string name="social_media">Social Media</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="cards">Cards</string>
    <string name="please_wait">Please wait...</string>
    <string name="home">Home</string>
    <string name="create_a_new_card">Create a new card</string>
    <string name="image_about_the_card">Image about the card</string>
    <string name="description">Description</string>
    <string name="login_user_email">login/user/email</string>
    <string name="category">Category</string>
    <string name="want_a_favorite_one">Want a favorite one?</string>
    <string name="icon_heart">Icon heart</string>
    <string name="save_card">Save card</string>
    <string name="url">URL</string>
    <string name="preview_image">Preview image</string>
    <string name="text_no_cards_yet">Looks like you haven’t created any card. Your cards will be displayed here</string>
    <string name="text_no_favorite_yet">Keep tracking your favorite cards by clicking at</string>
    <string name="no_cards_yet">No cards yet</string>
    <string name="card_view_description">Spotify</string>
    <string name="no_favorite_yet">No favorite yet</string>
    <string name="category_not_selected">Category not selected</string>
    <string name="description_is_empty">Description is empty</string>
    <string name="sorry_something_went_wrong">Sorry, but something went wrong =/</string>
    <string name="please_try_again_later">Please, try again later!!!</string>
    <string name="data_stored_in_our_server">Data stored in our server</string>
    <string name="one_more_data">One more data saved just waiting for you when you need it!!!</string>
    <string name="view_all">View all</string>
    <string name="title_list_cards">All categories</string>
    <string name="title_all_categories">All categories</string>
    <string name="title_streaming">Streaming</string>
    <string name="title_social_media">Social media</string>
    <string name="title_banks">Banks</string>
    <string name="title_education">Education</string>
    <string name="title_work">Work</string>
    <string name="title_cards">Cards</string>
    <string name="unknown_category">Unkown Category</string>
    <string name="sort_by">Sort by:</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="login_max_lines">login no more than two lines long as it is here</string>
    <string name="password_max_lines">password no more than two lines long as it is here</string>
    <string name="delete">Delete</string>
    <string name="login_username_email">Login/Username/Email</string>

</resources>