<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="22dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:backgroundTint="@color/purple"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSignUpTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_up_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageButtonBack" />

        <ImageView
            android:id="@+id/imageViewSignUp"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ic_app"
            app:layout_constraintBottom_toTopOf="@id/constraintLayoutSignUp2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSignUpSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_up_to_join"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSignUpTitle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutSignUp2"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_rounded_sides"
            app:layout_constraintTop_toBottomOf="@+id/textViewSignUpSubtitle" />

        <TextView
            android:id="@+id/textViewFewSteps"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/just_a_few_steps"
            android:textColor="@color/purple"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/constraintLayoutSignUp2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="55dp"
            android:hint="@string/name"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayoutSignUp2"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSignUpEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputName"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSignUpPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:cornerRadius="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputSignUpEmail"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSignUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSignUpConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:hint="@string/confirm_password"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:cornerRadius="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputSignUpPassword"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewPasswordMustHave"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/your_password_must_have"
            android:textColor="@color/purple"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputSignUpConfirmPassword" />

        <TextView
            android:id="@+id/textViewUpperCase"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/at_least_1_upper_case_letter"
            android:textColor="@color/gray_dark"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPasswordMustHave" />

        <TextView
            android:id="@+id/textViewLowerCase"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/at_least_1_lower_case_letter"
            android:textColor="@color/gray_dark"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUpperCase" />

        <TextView
            android:id="@+id/textViewSpecialCharacter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/at_least_1_special_character_amp"
            android:textColor="@color/gray_dark"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLowerCase" />

        <TextView
            android:id="@+id/textViewNumericCharacter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/at_least_1_numeric_character"
            android:textColor="@color/gray_dark"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSpecialCharacter" />

        <TextView
            android:id="@+id/textViewPasswordLength"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/at_least_16_characteres"
            android:textColor="@color/gray_dark"
            android:textSize="12sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="55dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumericCharacter" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUpCreateAccount"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/inter_bold"
            android:text="@string/create_an_account"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayoutSignUp2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>