<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <TextView
        android:id="@+id/tbTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/password_keeper"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/subtitle"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbTitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHome2"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="55dp"
        android:hint="@string/hint_email"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clHome2"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:hint="@string/password"
        app:cornerRadius="30dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up"
        android:textColor="@color/purple"
        android:textSize="12sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/or"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

    <View
        android:id="@+id/viewLeft"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="13dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

    <View
        android:id="@+id/viewRight"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvOr"
        app:layout_constraintTop_toBottomOf="@id/signUp" />

</androidx.constraintlayout.widget.ConstraintLayout>